Ubuntu with kernel 3.13.0-26 build
Change-Id: I374f67f58d3e88146c8da5d71fee40ca213d3033

--- a/upgrade/config/5.0/manifests/ubuntu-versions.yaml
+++ b/upgrade/config/5.0/manifests/ubuntu-versions.yaml
@@ -371,7 +371,7 @@ sgml-base: "1.26+nmu1ubuntu1"
 libssl0.9.8: "0.9.8o-7ubuntu3.1"
 initramfs-tools-bin: "0.99ubuntu13.5"
 pppconfig: "2.3.18+nmu3ubuntu1"
-linux-image-3.11.0-18-generic: "3.11.0-18.32~precise1"
+linux-image-3.13.0-32-generic: "3.13.0-32.57~precise1"
 net-tools: "1.60-24.1ubuntu2"
 cirros-testvm: "0.3.1-ubuntu3"
 libjs-jquery: "1.7.1-1ubuntu1"
@@ -844,7 +844,7 @@ ed: "1.5-3"
 libev4: "1:4.11-1"
 librdmacm1: "1.0.14.1-2"
 gcc: "4:4.6.3-1ubuntu5"
-linux-headers-3.11.0-18: "3.11.0-18.32~precise1"
+linux-headers-3.13.0-32: "3.13.0-32.57~precise1"
 menu: "2.1.46ubuntu1"
 python-eventlet: "0.13.0-0ubuntu1~cloud0"
 strace: "4.5.20-2.3ubuntu1"
@@ -1017,3 +1017,4 @@ libaugeas-ruby1.8: "0.3.0-1.1ubuntu4"
 base-files: "6.5ubuntu6.7"
 python-yaql: "0.2.2-ubuntu2"
 galera: "23.2.2"
+hpvsa: "1.2.10-121-3.13ubuntu1"
