Ubuntu with kernel 3.13.0-26 build
Change-Id: I374f67f58d3e88146c8da5d71fee40ca213d3033

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -139,6 +139,8 @@ fuse
 fuse-utils
 fence-agents
 fencing-agent
+hp-storage-3.13.0-32-generic-di
+hpvsa
 g++
 g++-4.6
 galera
@@ -510,8 +512,8 @@ libyaml-0-2
 libzmq1
 linux-firmware
 linux-firmware-nonfree
-linux-headers-3.11.0-18
-linux-image-3.11.0-18
+linux-headers-3.13.0-32
+linux-image-3.13.0-32
 linux-libc-dev
 linux-server
 lksctp-tools
