Add building of Fuel deb packages during ISO build.
1) Add routines for building deb packages and adding them to local mirror.
2) Add commands for creating Ubuntu-based build sandbox.
3) Update deb specs for Fuel components.

Change-Id: If098654d1158aca6676f9cbb3fc3100fc2e8674d

--- a/packages/deb/specs/nailgun-mcagents/debian/rules
+++ b/packages/deb/specs/nailgun-mcagents/debian/rules
@@ -11,7 +11,7 @@ clean:
 build-arch:
 	dh_testdir
 	mkdir -p debian/nailgun-mcagents/usr/share/mcollective/plugins/mcollective/agent/
-	tar -xzf nailgun-mcagents.tar.gz -C debian/nailgun-mcagents/usr/share/mcollective/plugins/mcollective/agent/
+	tar -xzf mcagents.tar.gz -C debian/nailgun-mcagents/usr/share/mcollective/plugins/mcollective/agent/
 
 build: build-arch build-indep
 
