Add horizon xstatic dependencies
Change-Id: I4906ce672b70d8dff5f233fa5a2cde3eabb80915
Partial-bug: #1364884

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -3,6 +3,7 @@ acl
 adduser
 alembic
 anacron
+angular.js
 apache2
 apache2-mpm-worker
 apache2-utils
@@ -68,6 +69,7 @@ cron
 cryptsetup
 cryptsetup-bin
 curl
+d3
 daemonize
 dash
 dbus
@@ -125,6 +127,7 @@ erlang-xmerl
 eswitchd
 ethtool
 euca2ools
+eyes.js
 facter
 fakeroot
 febootstrap
@@ -163,6 +166,7 @@ grub-pc
 grub-pc-bin
 grub2-common
 guestmount
+gyp
 gzip
 haproxy
 hdparm
@@ -344,7 +348,11 @@ libjasper1
 libjpeg-turbo8
 libjpeg8
 libjs-jquery
+libjs-jquery.quicksearch
+libjs-jsencrypt
+libjs-qunit
 libjs-sphinxdoc
+libjs-spin.js
 libjs-swfobject
 libjs-underscore
 libjson-ruby1.8
@@ -473,6 +481,7 @@ libudev0
 libusb-0.1-4
 libusb-1.0-0
 libuuid1
+libv8
 libv8-3.7.12.22
 libvirt-bin
 libvorbis0a
@@ -601,7 +610,35 @@ neutron-server
 neutron-vpn-agent
 nfs-common
 nginx
+node-ansi
+node-clean-css
+node-commander
+node-contextify
+node-cssom
+node-debug
+node-diff
+node-gyp
+node-glob
+node-graceful-fs
+node-growl
+node-gyp
+node-htmlparser
+node-inherits
+node-jake
+node-jsdom
 node-less
+node-lru-cache
+node-minimatch
+node-mocha
+node-nopt
+node-npmlog
+node-once
+node-osenv
+node-optimist
+node-semver
+node-sigmund
+node-utilities
+node-wordwrap
 nodejs
 nova-api
 nova-cert
@@ -774,6 +811,22 @@ python-webob
 python-werkzeug
 python-xapian
 python-xattr
+python-xstatic-angular-cookies
+python-xstatic-angular
+python-xstatic-d3
+python-xstatic-doc
+python-xstatic-font-awesome
+python-xstatic-hogan
+python-xstatic-jasmine
+python-xstatic-jquery-migrate
+python-xstatic-jquery.quicksearch
+python-xstatic-jquery.tablesorter
+python-xstatic-jquery
+python-xstatic-jsencrypt
+python-xstatic-qunit
+python-xstatic-rickshaw
+python-xstatic-spin
+python-xstatic
 python-zmq
 python-yaml
 python-pexpect
@@ -781,12 +834,14 @@ python2.7
 python2.7-minimal
 qemu-kvm
 qemu-utils
+queue-async
 rabbitmq-server
 radosgw
 readline-common
 reiserfsprogs
 resolvconf
 resource-agents
+rickshaw
 rsync
 rsyslog
 ruby
@@ -820,6 +875,7 @@ sg3-utils
 sgml-base
 shared-mime-info
 sharutils
+smash
 socat
 ssh-import-id
 ssl-cert
@@ -866,6 +922,7 @@ vim
 vim-common
 vim-tiny
 vlan
+vows
 watershed
 websockify
 wget
