--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -466,6 +466,22 @@ python-websockify
 python-werkzeug
 python-wsgilog-0.3-1
 python-wsgiref-0.1.2-6.el6
+python-XStatic
+python-XStatic-Angular
+python-XStatic-Angular-Cookies
+python-XStatic-Angular-Mock
+python-XStatic-D3
+python-XStatic-Font-Awesome
+python-XStatic-Hogan
+python-XStatic-JQuery-Migrate
+python-XStatic-JQuery.TableSorter
+python-XStatic-JQuery.quicksearch
+python-XStatic-JSEncrypt
+python-XStatic-Jasmine
+python-XStatic-QUnit
+python-XStatic-Rickshaw
+python-XStatic-Spin
+python-XStatic-jQuery
 python-zmq
 pyxattr-0.5.0-1.el6
 qemu
@@ -613,6 +629,7 @@ uwsgi-plugin-python
 v8-3.14.5.7-3.el6
 vim-enhanced-7.2.411-1.8.el6
 virt-what-1.11-1.2.el6
+web-assets
 wget
 whatmask-1.2-7.el6
 wireshark
