--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,6 +2,7 @@
 
 FROM fuel/centos
 MAINTAINER Matthew Mosesohn mmosesohn@mirantis.com
+WORKDIR /root
 
 RUN rm -rf /etc/yum.repos.d/*; echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=http://$(route -n | awk '/^0.0.0.0/ { print $2 }'):_PORT_/os/x86_64/\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo; yum clean all
 
