apt-ftparchive*.conf: don't hard code Ubuntu version
Use the UBUNTU_RELEASE and (the newly introduced) UBUNTU_RELEASE_NUMBER
variables instead.

The idea is to have a single place (config.mk) where the Ubuntu (kernel,
whatever) versions are defined (instead of spreading that data over 10+ files)

Change-Id: If6b298aa51cdffde6c633c3b7128173148fe95aa

--- a/mirror/ubuntu/files/apt-ftparchive-deb.conf
+++ b/mirror/ubuntu/files/apt-ftparchive-deb.conf
@@ -7,9 +7,9 @@ TreeDefault {
 };
 
 BinDirectory "pool/main" {
-  Packages "dists/precise/main/binary-amd64/Packages";
-  BinOverride "/repo/indices/override.precise.main";
-  ExtraOverride "/repo/indices/override.precise.extra.main";
+  Packages "dists/@@UBUNTU_RELEASE@@/main/binary-amd64/Packages";
+  BinOverride "/repo/indices/override.@@UBUNTU_RELEASE@@.main";
+  ExtraOverride "/repo/indices/override.@@UBUNTU_RELEASE@@.extra.main";
 };
 
 Default {
