--- a/mirror/ubuntu/files/apt-ftparchive-release.conf
+++ b/mirror/ubuntu/files/apt-ftparchive-release.conf
@@ -1,8 +1,8 @@
 APT::FTPArchive::Release::Origin "Ubuntu";
 APT::FTPArchive::Release::Label "Ubuntu";
-APT::FTPArchive::Release::Suite "precise";
-APT::FTPArchive::Release::Version "12.04";
-APT::FTPArchive::Release::Codename "precise";
+APT::FTPArchive::Release::Suite "@@UBUNTU_RELEASE@@";
+APT::FTPArchive::Release::Version "@@UBUNTU_VERSION_NUMBER@@";
+APT::FTPArchive::Release::Codename "@@UBUNTU_RELEASE@@";
 APT::FTPArchive::Release::Architectures "amd64";
 APT::FTPArchive::Release::Components "main";
-APT::FTPArchive::Release::Description "Ubuntu Precise 12.04 LTS"; 
+APT::FTPArchive::Release::Description "Ubuntu @@UBUNTU_RELEASE@@ @@UBUNTU_VERSION_NUMBER@@ LTS";
