--- a/mirror/ubuntu/files/apt-ftparchive-udeb.conf
+++ b/mirror/ubuntu/files/apt-ftparchive-udeb.conf
@@ -7,8 +7,8 @@ TreeDefault {
 };
 
 BinDirectory "pool/debian-installer" {
-  Packages "dists/precise/main/debian-installer/binary-amd64/Packages";
-  BinOverride "/repo/indices/override.precise.main.debian-installer";
+  Packages "dists/@@UBUNTU_RELEASE@@/main/debian-installer/binary-amd64/Packages";
+  BinOverride "/repo/indices/override.@@UBUNTU_RELEASE@@.main.debian-installer";
 };
 
 Default {
