automatically guess the Debian-installer's kernel version
Change-Id: I439eac0a3c45406d8b0340171d896ab6fc8f6404

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -511,8 +511,8 @@ libyaml-0-2
 libzmq1
 linux-firmware
 linux-firmware-nonfree
-linux-headers-3.11.0-18
-linux-image-3.11.0-18
+linux-image-@@INSTALLER_KERNEL_VERSION@@
+linux-headers-@@INSTALLER_KERNEL_VERSION@@
 linux-libc-dev
 linux-server
 lksctp-tools
