--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -449,7 +449,7 @@ python-routes
 python-routes1.12-1.12.3-4.el6
 python-saharaclient
 python-seqdiag-0.8.2-1
-python-setuptools-0.6.10-3.el6
+python-setuptools
 python-simplejson
 python-six
 python-sphinx10-1.0.8-1.el6
