Remove hardcode packages version in requirements.txt
Update dependencies for juno

blueprint fuel-deploy-juno

Change-Id: Ie46d76bce316988e4a51c24f4fcf196c47989529

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -68,8 +68,8 @@ dhclient
 dhcp
 disktype
 dmidecode-2.11-2.el6
-dnsmasq-2.65-5.el6
-dnsmasq-utils-2.65-5.el6
+dnsmasq
+dnsmasq-utils
 dpkg
 dpkg-devel
 dstat
@@ -359,8 +359,8 @@ puppetdb-terminus-1.2.0-1.el6
 puppetlabs-release-6-6
 pushy
 pygobject2-2.20.0-5.el6
-pyparsing-1.5.6-1.el6
-pyparsing-doc-1.5.6-1.el6
+pyparsing
+pyparsing-doc
 pysendfile-2.0.0-3.el6
 python-actdiag-0.4.3-1
 python-alembic
@@ -378,7 +378,7 @@ python-cinderclient
 python-cliff
 python-cliff-tablib
 python-cloudfiles-1.7.9.3-1.el6
-python-cmd2-0.6.4-7.el6
+python-cmd2
 python-crypto
 python-d2to1-0.2.10-1.el6
 python-daemon-1.5.2-1.el6
@@ -400,13 +400,13 @@ python-glanceclient
 python-greenlet
 python-greenlet-devel
 python-heatclient
-python-httplib2-0.7.7-1.el6
+python-httplib2
 python-imgcreate
 python-importlib-1.0.2-1.el6
 python-ipaddr-2.1.9-1.el6
 python-iso8601
 python-jsonschema
-python-keyring-0.7-1.el6
+python-keyring
 python-keystone
 python-keystoneclient
 python-keystoneclient-doc
@@ -516,10 +516,10 @@ rubygem-httpclient-doc-2.3.2-5.el6
 rubygem-i18n-0.6.4-1.el6
 rubygem-ipaddress-0.8.0-3.el6
 rubygem-ipaddress-doc-0.8.0-3.el6
-rubygem-json-1.7.7-101.el6
-rubygem-json-doc-1.7.7-101.el6
-rubygem-json_pure-1.7.7-1.el6
-rubygem-json_pure-doc-1.7.7-1.el6
+rubygem-json
+rubygem-json-doc
+rubygem-json_pure
+rubygem-json_pure-doc
 rubygem-mail-2.2.19-1.el6
 rubygem-mime-types
 rubygem-mime-types-doc-1.16-mira.5
