Min version of rubygem-json for nailgun-agent
nailgun-agent fails with rubygem-json 1.6.1.
Version 1.7.7 is a known working version
that can be used.

Change-Id: I9de83c32636e82a17089bf2500516e0affb866ca
Closes-Bug: #1379299

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -517,7 +517,7 @@ rubygem-httpclient-doc-2.3.2-5.el6
 rubygem-i18n-0.6.4-1.el6
 rubygem-ipaddress-0.8.0-3.el6
 rubygem-ipaddress-doc-0.8.0-3.el6
-rubygem-json
+rubygem-json-1.7.7
 rubygem-json-doc
 rubygem-json_pure
 rubygem-json_pure-doc
