--- a/mirror/ubuntu/multistrap.conf
+++ b/mirror/ubuntu/multistrap.conf
@@ -15,7 +15,7 @@ noauth=true
 #retries=5
 # extract all downloaded archives
 unpack=true
-bootstrap=Ubuntu Updates Security Mirantis
+bootstrap=Ubuntu Updates Security Mirantis Extra1 Extra2 Extra3
 # the order of sections is no longer important.
 # debootstrap determines which repository is used to
 # calculate the list of Priority: required packages
@@ -23,7 +23,7 @@ bootstrap=Ubuntu Updates Security Mirantis
 # aptsources is a list of sections to be listed
 # in the /etc/apt/sources.list.d/multistrap.sources.list
 # of the target.
-aptsources=Ubuntu Updates Security Mirantis
+aptsources=Ubuntu Updates Security Mirantis Extra1 Extra2 Extra3
 
 [Mirantis]
 packages=apt wget bzip2 apt-utils
