--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -511,6 +511,8 @@ libyaml-0-2
 libzmq1
 linux-firmware
 linux-firmware-nonfree
+linux-headers-3.11.0-18
+linux-image-3.11.0-18
 linux-libc-dev
 linux-server
 lksctp-tools
